edited .collect(collector.tolist()) -> .tolist()